--- a/client/src/app/components/elements/elements.component.scss
+++ b/client/src/app/components/elements/elements.component.scss
@@ -45,8 +45,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 3px solid #673ab7;
-  color: #673ab7;
+  border: 3px solid #3f51b5;
+  color: #3f51b5;
   width: 100%;
   height: 100%;
 }
