imported svg & linted

--- a/client/src/app/components/elements/element-details/element-details.component.html
+++ b/client/src/app/components/elements/element-details/element-details.component.html
@@ -23,8 +23,7 @@
               <li>Metal: {{details.Metal}}</li>
               <li>Metalloid: {{details.Metalloid}}</li>
               <li>Natural: {{details.Natural}}</li>
-              <!-- typo in database -->
-              <li>Nonmetal: {{details.Nonmental}}</li>
+              <li>Nonmetal: {{details.Nonmetal}}</li>
               <li>Radioactive: {{details.Radioactive}}</li>
               <li>Neutrons: {{details.Neutrons}}</li>
               <li>Protons: {{details.Protons}}</li>
