--- a/client/src/app/components/elements/elements.component.scss
+++ b/client/src/app/components/elements/elements.component.scss
@@ -1,64 +1,30 @@
 .grid-container {
-  margin: 5%; 
-  margin-top: 20px;
-  height: 100%;
+  margin-top: 1rem;
+  height: 100vh;
+  width: 100vw;
 }
-.grid-list {
-  //angular material breakpoints
-  //xl
-  @media (min-width: 1910px) {
-    height: calc(1250vw  / 8);
-  }
-  //lg 
-  @media (max-width: 1919px) {
-    height: calc(1600vw / 6);
-  }
-  //md 
-  @media (max-width: 1439px) {
-    height: calc(2500vw / 4);
-  }
-  //sm 
-  @media (max-width: 1023px) {
-    height: calc(5000vw / 2);
-  } 
-  //xs
-  @media (max-width: 599px) {
-    height: 10000vw;
-  }
+mat-form-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 1000;
 }
-.dashboard-card {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-  border-radius: 3px;
-  background: #f5f5f5;
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  -o-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+::ng-deep .mat-form-field-infix {
+  width: 500px !important;
 }
-.dashboard-card-content { 
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 3px solid #3f51b5;
-  color: #3f51b5;
+svg {
   width: 100%;
-  height: 100%;
-}
-.symbol {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 3rem;
-}
-.number {
-  position: absolute;
-  bottom: 0;
-  right: 12px;
+  height: 81vh;
+  padding: 0 1rem;
+  margin-top: -3rem;
+
+  g {
+    &:hover, &.active {
+      fill: #E8EAF6;
+      -webkit-filter: drop-shadow( 0px 1px 1px rgba(0, 0, 0, 0.4));
+      filter: drop-shadow( 0px 1px 1px rgba(0, 0, 0, 0.4));
+      z-index: 100;
+    }
+  }
 }
