--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,9 +1,72 @@
-svg {
-    flex: auto;
-    align-items: center;
-    fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;
+div {
+  margin: 2rem;
+  margin-top: 2rem !important;
+  margin-left: 6rem !important;
 }
+svg {
+  width: 95%;
+  fill-rule: evenodd;
+  clip-rule: evenodd;
+  stroke-linejoin: round;
+  stroke-miterlimit: 1 !important;
+  background: linear-gradient(
+    270deg,
+    #f44336,
+    #ff9800,
+    #ffc107,
+    #4caf50,
+    #2196f3,
+    #9c27b0,
+    #3f51b5
+  );
+  background-size: 900% 900%;
+//   -webkit-animation: rainbow 36s ease-in-out 0s alternate infinite;
+//   animation: rainbow 36s ease-in-out 0s alternate infinite;
+// }
+
+// @-webkit-keyframes rainbow {
+//   0% {
+//     background-position: 0% 25%;
+//   }
+//   25% {
+//     background-position: 25% 50%;
+//   }
+//   50% {
+//     background-position: 50% 75%;
+//   }
+//   75% {
+//     background-position: 75% 50%;
+//   }
+//   100% {
+//     background-position: 100% 25%;
+//   }
+// }
+// @keyframes rainbow {
+//   0% {
+//     background-position: 0% 25%;
+//   }
+//   25% {
+//     background-position: 25% 50%;
+//   }
+//   50% {
+//     background-position: 50% 75%;
+//   }
+//   75% {
+//     background-position: 75% 50%;
+//   }
+//   100% {
+//     background-position: 100% 25%;
+//   }
+}
+
 path {
-    fill: #FAFAFA;
-    fill-rule:nonzero;
+  fill: #000 !important;
+  fill-rule: nonzero;
+  pointer-events: all;
+  z-index: 100;
+  opacity: 72%;
+
+  &.active {
+    opacity: 100%;
+  }
 }
