--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,7 +12,7 @@
       class="element"
       width="100%"
       height="100%"
-      fill="#EEEEEE"
+      fill="#E0E0E0"
       x="0"
       y="0"
       fill-opacity="1"
