--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -20,43 +20,43 @@ svg {
     #3f51b5
   );
   background-size: 900% 900%;
-//   -webkit-animation: rainbow 36s ease-in-out 0s alternate infinite;
-//   animation: rainbow 36s ease-in-out 0s alternate infinite;
-// }
+  -webkit-animation: rainbow 36s ease-in-out 0s alternate infinite;
+  animation: rainbow 36s ease-in-out 0s alternate infinite;
+}
 
-// @-webkit-keyframes rainbow {
-//   0% {
-//     background-position: 0% 25%;
-//   }
-//   25% {
-//     background-position: 25% 50%;
-//   }
-//   50% {
-//     background-position: 50% 75%;
-//   }
-//   75% {
-//     background-position: 75% 50%;
-//   }
-//   100% {
-//     background-position: 100% 25%;
-//   }
-// }
-// @keyframes rainbow {
-//   0% {
-//     background-position: 0% 25%;
-//   }
-//   25% {
-//     background-position: 25% 50%;
-//   }
-//   50% {
-//     background-position: 50% 75%;
-//   }
-//   75% {
-//     background-position: 75% 50%;
-//   }
-//   100% {
-//     background-position: 100% 25%;
-//   }
+@-webkit-keyframes rainbow {
+  0% {
+    background-position: 0% 25%;
+  }
+  25% {
+    background-position: 25% 50%;
+  }
+  50% {
+    background-position: 50% 75%;
+  }
+  75% {
+    background-position: 75% 50%;
+  }
+  100% {
+    background-position: 100% 25%;
+  }
+}
+@keyframes rainbow {
+  0% {
+    background-position: 0% 25%;
+  }
+  25% {
+    background-position: 25% 50%;
+  }
+  50% {
+    background-position: 50% 75%;
+  }
+  75% {
+    background-position: 75% 50%;
+  }
+  100% {
+    background-position: 100% 25%;
+  }
 }
 
 path {
