--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -8,37 +8,26 @@ svg {
   fill-rule: evenodd;
   clip-rule: evenodd;
   stroke-linejoin: round;
-  stroke-miterlimit: 1 !important;
+  stroke-miterlimit: 1;
 }
 path {
-  fill: #999;
-  fill-rule: nonzero;
+  fill: #888fb8;
+  fill-opacity: 1;
   pointer-events: all;
-  z-index: 100;
-  opacity:100%;
-  transition: fill 4s ease;
-  
-  &.active {
-    &.red {
-      fill: #f44336;
-    }
-    &.organge {
-      fill: #ff9800;
-    }
-    &.yellow {
-      fill: #ffc107;
-    }
-    &.green {
-      fill: #4caf50;
-    }
-    &.blue {
-      fill: #2196f3;
-    }
-    &.indigo {
-      fill: #9c27b0;
-    }
-    &.violet {
-      fill: #3f51b5;
-    }
-  }
+  transition: fill 6s ease-in-out;
+  transition: fill-opacity .81s ease-in-out;
+  animation: color-change 18s linear infinite alternate;
+}
+
+path:hover {
+  fill-opacity: .72;
+}
+
+@keyframes color-change {
+  0% { fill: #ff5555 }
+  20% { fill: #fb9325; }
+  40% { fill: #dfef26; }
+  60% { fill: #50fa7b; }
+  80% { fill: #6272a4; }
+  100% { fill: #924ff2; }
 }
